# OctoPrint-PSUControl-Shelly

./: .plugincheck  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
octoprint_psucontrol_shelly/: __init__.py
octoprint_psucontrol_shelly/templates/: psucontrol_shelly_settings.jinja2
